--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,7 +1,7 @@
 .wrapper {
   background-image: linear-gradient(
       to bottom right,
-      rgba($color-brand, 0.8),
+      rgba($color-light, 0.8),
       rgba($color-light, 0.8)
     ),
     url(/img/header-bg.jpg);
